# ze-tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.adoc  README_CN.adoc
Allocator/: CMakeLists.txt
Allocator/include/ze/allocator/: allocator.hpp
Collection/: CMakeLists.txt
Collection/include/ze/collection/: pmr_sparse_set.hpp  sparse_set.hpp
Collection/test/: test_sparse_set.cpp
ECS/: CMakeLists.txt
ECS/include/ze/ecs/: archetype.hpp  ecs.hpp  ecs_manager.hpp  entity.hpp  system.hpp
ECS/test/: test_ecs.cpp
Utils/: CMakeLists.txt
Utils/include/utils/: filesystem.hpp
Utils/src/: filesystem.cpp  std_filesystem.cpp  std_filesystem.hpp
Utils/test/: test_filesystem.cpp
